add_executable(mthdcat  mthdcat.cc)
target_link_libraries(mthdcat  -lroot -lnetwork apt-pkg)
add_executable(testdeb testdeb.cc)
target_link_libraries(testdeb  -lroot -lnetwork apt-pkg)
add_executable(extract-control extract-control.cc)
target_link_libraries(extract-control  -lroot -lnetwork apt-pkg)
add_executable(aptwebserver aptwebserver.cc)
target_link_libraries(aptwebserver apt-pkg -lroot -lnetwork ${CMAKE_THREAD_LIBS_INIT})
add_executable(aptdropprivs aptdropprivs.cc)
target_link_libraries(aptdropprivs  -lroot -lnetwork apt-pkg)
add_executable(test_fileutl test_fileutl.cc)
target_link_libraries(test_fileutl  -lroot -lnetwork apt-pkg)

add_library(noprofile SHARED libnoprofile.c)
target_link_libraries(noprofile  -lroot -lnetwork ${CMAKE_DL_LIBS})
